# Mistral-X_API

./: .gitignore  API.md  BDD.md  HOST.md  LICENSE  PROJECTS.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
src/API/: database.py  main.py  schema.py  scheme.py  test_router.py
src/API/endpoints/: Auth.py  Models.py  Sessions.py  Token.py
src/API/routers/: Auth.py  Models.py  Sessions.py
src/API/templates/: index.html
src/API/tests/: prompts_history.py  prompts_tools.py  test.py
src/API/tests/utils/: HistoryClass.py
src/API/unit/: prompt-streamed.py  prompts_history.py  prompts_tools.py
src/API/unit/utils/: HistoryClass.py
src/API/unit_tests/: api_mistrailai_request.py  basic_test.py  prompt-streamed.py  prompts_tools.py  too_many_requests.py
src/API/unit_tests/utils/: HistoryClass.py
src/Core/: config.py
src/DataBase/: models_db.py  sessions_db.py
src/DataBase/fake-db/: session.json
src/Models/Mistralai/: main.py  utilities.py
src/Schemas/: mistral_ai.py  sessions.py
